--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "bootstrap-vue-3": "^0.5.1",
     "jquery": "^3.7.1",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
