--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,10 +17,12 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.8.1",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "bootstrap-vue-3": "^0.5.1",
     "jquery": "^3.7.1",
+    "jwt-decode": "^4.0.0",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
