--- a/backend/package.json
+++ b/backend/package.json
@@ -12,10 +12,9 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
+    "test": "cross-env NODE_ENV=test ts-node run-tests-individually.ts",
     "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand"
+    "test:cov": "jest --coverage"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
@@ -57,6 +56,9 @@
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
+    "cross-env": "^7.0.3",
     "eslint": "^9.18.0",
     "globals": "^15.14.0",
     "jest": "^29.7.0",
@@ -68,8 +70,6 @@
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.7.3",
-    "bcrypt": "^5.1.1",
-    "bcryptjs": "^3.0.2",
     "typescript-eslint": "^8.20.0"
   }
 }
