--- a/.github/workflows/master_4cite.yml
+++ b/.github/workflows/master_4cite.yml
@@ -37,6 +37,11 @@ jobs:
           npm install
           npm run build --if-present
           npm run test --if-present
+          cd ..
+          cd frontend
+          npm install
+          npm run build --if-present
+          npm run test --if-present
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
