--- a/.github/workflows/master_4cite.yml
+++ b/.github/workflows/master_4cite.yml
@@ -41,7 +41,7 @@ jobs:
           cd frontend
           npm install
           npm run build --if-present
-          npm run test --if-present
+          npm run test:unit --if-present
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
